--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@ a:hover {
      <h2 id="jump4">Environment</h2>
      <p class="bbs">The environment greatly effects people. Japanese people often care about others deeply. Those who extend this concern to even the smallest details of daily life can wear themselves out mentally by constantly being around others. Such people need a safe, secure environment where they feel at ease. If your home is a safe environment, working there is most efficient. Finding a dedicated workspace with your own set spot can also boost productivity. Conversely, people who struggle to concentrate or discipline themselves in their own room need the feeling of being watched by others. Places like cafes or libraries suit them better. If you find yourself slacking off or constantly checking your phone when alone in your room, you need to take the plunge and step into a new environment.</p>
      
-     <h2 id="jump5">Planner or Activist</h2>
-     <p class="bbs">Some people prefer to plan their study sessions in advance, while others prefer to dive in and adapt as they go. The former are called "Planners" and the latter are "Activists". Planners tend to be more organized and methodical, while Activists are more spontaneous and flexible. Understanding your preference can help you choose the most effective study approach for your learning style. Perfectionists find meaning even in thoroughly completing every task they set for themselves. While maintaining that motivation is admirable, rigidly planning everything from the start can limit your actions. Those whose moods shift easily aren't suited to meticulously planning their studies. Set broad goals, but remember: the heart of studying is consistency. It's crucial to find ways to keep yourself in a good mood and enjoy learning, using whatever methods work for you.</p>
+     <h2 id="jump5">Personality~planning~</h2>
+     <p class="bbs">Most of you have made a plan for study or have tried to make a plan for study before. However, people often fail when they try first time. They make some mistakes. What I want to tell you is that to establish a study plan is essential for study, but maintaining consist learning is more important than making a plan. First, what is a study plan? A study plan is an organized schedule that incorporates your academic, professional, social, and personal commitments. A study plan will help you efficiently make decisions and use your time to do things that matter to you. Therefore, to find out your personality, especially flexibility is what we need. Let's make your perfect plan for your study.</p>
      <h3 id="jump6" class="article-h3">↓↓↓Let's find out your learning style!↓↓↓</h3>
     </span>   
     <!--ここから診断スタート-->
@@ -365,7 +365,7 @@ a:hover {
         },
         "朝型-グループ-外-衝動": {
             name: "🌟 Active Moodmaker",
-            description: "You're a natural mood-maker with strong teamwork skills and excellent adaptability. Your performance will improve when you freely manage your time and pursue your interests to your heart's content. Since you often study with others, you're likely skilled at seeing yourself objectively—but don't forget to check in on yourself occasionally. Placing yourself in diverse environments and seeking stimulation should boost your productivity. Stay mindful of your surroundings while dedicating yourself to your studies."
+            description: "You're a natural mood-maker with strong teamwork skills and excellent adaptability. Your performance will improve when you freely manage your time and pursue your interests to your heart's content. Since you often study with others, you're likely skilled at seeing yourself objectively but don't forget to check in on yourself occasionally. Placing yourself in diverse environments and seeking stimulation should boost your productivity. Not making a tight schedule but making a rough plan may help your study.strictStay mindful of your surroundings while dedicating yourself to your studies."
         },
         "夜型-一人-家-計画": {
             name: "🌙 Night Researcher",
@@ -397,7 +397,7 @@ a:hover {
         },
         "夜型-グループ-外-衝動": {
             name: "✨ Night Panda",
-            description: "You're a sociable, cheerful mood-maker. Your free-spirited nature inspires others, allowing you to enjoy group study sessions. If you get bored with your current subject, switch to one you enjoy immediately. The key to studying is maintaining consistency. Steer your own mood and keep pushing forward."
+            description: "ou're a sociable, cheerful mood-maker. Your free-spirited nature inspires others, allowing you to enjoy studying in a group. If you get bored with your current subject, switch to one you enjoy immediately. The key to studying is maintaining consistency. If you can find out your preference of study or any routine, it's time to make a plan.Steer your own mood and keep pushing forward."
         }
     };
 
@@ -610,11 +610,11 @@ a:hover {
             ]
         },
         {
-            question: "Q25. I prefer to study in a familiar place rather than a new place",
+            question: "Q25. Which do you focus better, in complete silence or with some background noise?",
             choices: [
-                { text: "I don't like new places", placetype: 5 },
-                { text: "Sometimes I like new places", placetype: 3 },
-                { text: "I like new places", placetype: 1 }
+                { text: "In complete silence", placetype: 5 },
+                { text: "Both", placetype: 3 },
+                { text: "Background noise", placetype: 1 }
             ]
         },
         {
@@ -642,7 +642,7 @@ a:hover {
             ]
         },
         {
-            question: "Q29. I don't like crowded places",
+            question: "Q29. Hearing conversations around me disrupts my focus",
             choices: [
                 { text: "Strongly agree", placetype: 5 },
                 { text: "Neither agree nor disagree", placetype: 3 },
@@ -650,11 +650,11 @@ a:hover {
             ]
         },
         {
-            question: "Q30. I tend to get used to a new place quickle",
+            question: "Q30. I know which sound environment works best for each type of my study task",
             choices: [
-                { text: "I don't get used to new places easily", placetype: 5 },
-                { text: "Neither easily nor slowly", placetype: 3 },
-                { text: "I get used to quickly", placetype: 1 }
+                { text: "I know", placetype: 5 },
+                { text: "A little", placetype: 3 },
+                { text: "I don't know", placetype: 1 }
             ]
         },
 
